fix(ParallaxBlock): :art: Adjust width and text alignment for the first item, and update image source for improved visual consistency.

--- a/src/components/home/ParallaxBlock/ParallaxBlock.module.scss
+++ b/src/components/home/ParallaxBlock/ParallaxBlock.module.scss
@@ -31,9 +31,10 @@
       mix-blend-mode: difference;
 
       &:first-of-type {
-        width: 50vw;
+        width: 40vw;
         font-size: 2vw;
         align-self: flex-end;
+        text-align: right;
       }
 
       &:last-of-type {
